# ResearchHarness

./: LICENSE  README.md  pyproject.toml
docs/: v0.1-implementation-plan.md
researchharness/: __init__.py  cli.py  config.py
researchharness/artifacts/: __init__.py  store.py
researchharness/domain/: __init__.py  models.py
researchharness/llm/: __init__.py  gateway.py
researchharness/persistence/: __init__.py  json_store.py  session_store.py  task_store.py  workspace.py
researchharness/session/: __init__.py  resume.py  runtime.py  task_planner.py
researchharness/shell/: __init__.py  app.py  commands.py  input_normalizer.py  repl.py
researchharness/tools/: __init__.py  registry.py  task_mutation.py
tests/: __init__.py  test_cli.py  test_domain_models.py  test_repl_shell.py  test_session_resume.py  test_shell_commands.py  test_task_planner.py  test_workspace.py
