[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchharness"
version = "0.1.0a0"
description = "Session-first research harness foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ResearchHarness contributors" },
]
dependencies = []

[project.scripts]
rh = "researchharness.cli:main"

[tool.setuptools.packages.find]
include = ["researchharness*"]

